[tool.poetry]
name = "viz-image-deobfuscate"
version = "0.1.4"
description = "Deobfuscate Viz-style manga images."
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/viz-image-deobfuscate"
readme = "README.md"
license = "MIT"
keywords = ["viz", "manga", "deobfuscate", "image"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.0"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
nose2 = "^0.11.0"

[tool.poetry.scripts]
image-deobfuscate-cli = "viz_image_deobfuscate.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
